--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.14",
+    "@types/react": "^17.0.4",
+    "typescript": "^4.2.4"
   }
 }
