--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint --fix", "yarn test --bail"
+      "yarn lint --fix", 
+      "yarn test --findRelatedTests --bail"
     ]
   },
   "dependencies": {
