--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint --fix", 
+      "yarn lint --fix",
       "yarn test --findRelatedTests --bail"
     ]
   },
   "dependencies": {
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
@@ -30,8 +31,10 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^14.0.14",
     "@types/react": "^17.0.4",
+    "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
